[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.theme" type="Theme" id=1]
[ext_resource path="res://scenes/CityChooser.gd" type="Script" id=2]

[node name="CityChooser" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 488.0
margin_bottom = 576.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 480.0
margin_bottom = 32.0
theme = ExtResource( 1 )
text = "Cities"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CityList" type="ItemList" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 480.0
margin_bottom = 236.0
rect_min_size = Vector2( 400, 200 )
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false ]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 480.0
margin_bottom = 260.0
custom_constants/separation = 14

[node name="SelectCityButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 79.0
margin_bottom = 20.0
text = "Select City"

[node name="CloseCityChooserButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 93.0
margin_right = 140.0
margin_bottom = 20.0
text = "Close"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SelectCityButton" to="." method="_on_SelectCityButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CloseCityChooserButton" to="." method="_on_CloseCityChooserButton_pressed"]
